Archive2/5a/1de04bcf8c84a6/output
main.cpp:5:11: error: expected initializer before 'cvcv'
 int main()cvcv
           ^
